# ProjetoEngenharia-SoftwareControlador-MedidorDeBancadaAz-pH-mV-ORP-Cond-TDS-SALT

./: README.md  Teste de commit.txt
MaterialAuxiliar/TrabalhoBueno/: DiagramaClasses.xmi  changelog.txt
MaterialAuxiliar/TrabalhoBueno/escher-v1/build-escher-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
MaterialAuxiliar/TrabalhoBueno/escher-v1/build-escher-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
MaterialAuxiliar/TrabalhoBueno/escher-v1/build-escher-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
MaterialAuxiliar/TrabalhoBueno/escher-v1/build-escher-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/escher_autogen/: deps
MaterialAuxiliar/TrabalhoBueno/escher-v1/escher/: CMakeLists.txt  enums.h  main.cpp  mainwindow.h
MaterialAuxiliar/TrabalhoBueno/escher-v3/: sensor.cpp
doc/Apresentacao/: Apresentação.pptx
doc/ManualDoDesenvolvedor/: Cap0-Introducao-Escopo-Objetivos-Metodologia.lyx  Cap1-Concepcao.lyx  Cap2-Elaboracao.lyx  Cap3-AnaliseOrientadaAObjeto.lyx  Cap4-Projeto.lyx
doc/ManualDoDesenvolvedor/imagens/: Casodeusoespec.xmi  NOTASPROGRAMA  diageral.xmi
doc/ManualDoDesenvolvedor/imagens/escher-v1/: TCC_ROTEIRO.txt
doc/ManualDoDesenvolvedor/imagens/escher-v1/escher/: aboutwindow.cpp  aboutwindow.h  mainwindow.cpp  mainwindow.ui  measure.cpp  meter.h  sensor.h
doc/ManualDoDesenvolvedor/imagens/escher-v2/: escher.pro  escher.pro.user.fdef390  mainwindow.cpp  mainwindow.h  mainwindow.ui  sensor.cpp
doc/ManualDoDesenvolvedor/imagens/escher-v3/: escher.pro  mainwindow.cpp
doc/html/: about_8h_source.html  annotated.html  class_about-members.html  class_about.html  class_i_measure-members.html  class_i_measure.html  class_i_sensor-members.html  class_i_sensor.html  class_measure-members.html  class_measure.html  class_sensor__86501__551-members.html  class_sensor__86501__551.html  class_utils-members.html  class_utils.html  classes.html  dir_277a62d08c40b9595985fa5ca8f0f17d.html  dir_90a962bba04c6c66aff794cef65be83a.html  enums_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  measure_8h_source.html  sensor_8h_source.html  utils_8h_source.html
doc/html/search/: all_2.js  functions_0.js  searchdata.js
doc/latex/: about_8h_source.tex  annotated.tex  class_about.tex  class_i_measure.eps  class_i_measure.tex  class_i_sensor.eps  class_i_sensor.tex  class_measure.eps  class_measure.tex  class_sensor__86501__551.eps  class_sensor__86501__551.tex  class_utils.tex  enums_8h_source.tex  files.tex  hierarchy.tex  measure_8h_source.tex  refman.tex  sensor_8h_source.tex  utils_8h_source.tex
src/escher-v3/: escher.pro.user.fdef390  sensor.h
versao-1/doc/ManualDoDesenvolvedor/: Cap0-Capa.lyx  Cap0-Introducao-Escopo-Objetivos-Metodologia.lyx  Cap1-Concepcao.lyx  Cap3-AnaliseOrientadaAObjeto.lyx
versao-1/doc/ManualDoDesenvolvedor/imagens/: Casodeusoespec.xmi  Casodeusogeral.xmi  Projeto de Engenharia de Software.docx  desktop.ini
versao-1/doc/ManualDoDesenvolvedor/imagens/escher-v3/: about.cpp
versao-1/src/escher-v3/: IntPetro.ini  IpProj47.hbk  escher.pro.qtds  measure.cpp  utils.cpp  utils.h
versao-2/doc/ManualDoDesenvolvedor/: #Cap-Apendice-A.lyx#  #Cap0-Introducao-Escopo-Objetivos-Metodologia.lyx#  #Cap1-Concepcao.lyx#  #Cap2-Elaboracao.lyx#  #Cap3-AnaliseOrientadaAObjeto.lyx#  #Cap4-Projeto.lyx#  #Cap5-Ciclos-Planejamento-Detalhamento.lyx#  #Cap6-Ciclos-Construcao-Implementacao.lyx#  #Cap7-Teste.lyx#  #Cap8-DocumentacaoDoDesenvolvedor.lyx#  Cap-Apendice-A.lyx  Cap0-Capa-ProjetoDisciplina.lyx  Cap0-Introducao-Escopo-Objetivos-Metodologia.lyx  Cap1-Concepcao.lyx  Cap2-Elaboracao.lyx  Cap3-AnaliseOrientadaAObjeto.lyx  Cap4-Projeto.lyx  Cap5-Ciclos-Planejamento-Detalhamento.lyx  Cap6-Ciclos-Construcao-Implementacao.lyx  Cap7-Teste.lyx  Cap8-DocumentacaoDoDesenvolvedor.lyx  ProjetoEngenharia-ManualDoDesenvolvedor.lyx
versao-2/doc/ManualDoDesenvolvedor/Doxygen/html/: _instrumentor_8cpp.html  _instrumentor_8h.html  _instrumentor_8h_source.html  about_8cpp.html  about_8h.html  about_8h_source.html  annotated.html  class_about-members.html  class_about.html  class_i_measure-members.html  class_i_measure.html  class_i_sensor-members.html  class_i_sensor.html  class_instrumentation_timer-members.html  class_instrumentation_timer.html  class_instrumentor-members.html  class_instrumentor.html  class_main_window-members.html  class_main_window.html  class_measure-members.html  class_measure.html  class_q_c_p_abstract_item-members.html  class_q_c_p_abstract_item.html  class_q_c_p_abstract_legend_item-members.html  class_q_c_p_abstract_legend_item.html  class_q_c_p_abstract_paint_buffer-members.html  class_q_c_p_abstract_paint_buffer.html  class_q_c_p_abstract_plottable-members.html  class_q_c_p_abstract_plottable.html  class_q_c_p_abstract_plottable1_d-members.html  class_q_c_p_abstract_plottable1_d.html  class_q_c_p_axis-members.html  class_q_c_p_axis.html  class_q_c_p_axis_painter_private-members.html  class_q_c_p_axis_painter_private.html  class_q_c_p_axis_rect-members.html  class_q_c_p_axis_rect.html  class_q_c_p_axis_ticker-members.html  class_q_c_p_axis_ticker.html  class_q_c_p_axis_ticker_date_time-members.html  (+286 more)
versao-2/doc/ManualDoDesenvolvedor/Doxygen/rtf/: dir_2df3c4e16d502c5a59c01b473455c6d9.rtf  dir_3c9ab875e6c9c4146f4f9177047a19ad.rtf  dir_587eca7745d6bc300932c3493f482c4b.rtf  dir_9c6b7031ef0bb6baaae5b311614827b2.rtf  dir_f396504afdc959660871b003fa10164d.rtf
versao-2/doc/ManualDoDesenvolvedor/imagens/: Apresentação.pptx  Casodeusogeral.xmi  changelog.txt
versao-2/doc/ManualDoUsuario/: #Cap0-Capa.lyx#  #Cap2-Interface-ComoUsar.lyx#  Cap2-Interface-ComoUsar.lyx
versao-2/src/: BuildDebug.bat  BuildRelease.bat  CMakeLists.txt  Instrumentor.cpp  Instrumentor.h  Pedro.pro  Pedro.pro.user.9929ca3  about.cpp  about.h  about.ui  enums.h  imeasure.h  isensor.h  leiame.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measure.cpp  measure.h  qcustomplot.h  sensor.cpp  sensor.h  utils.cpp  utils.h
(+140 files in other folders)
